Adding new tasks in the test

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ZeldaApp</string>
+    <string name="app_name">Ninja Candidate</string>
 
     <!-- Error Container -->
     <string name="ops">Ops… :(</string>
@@ -18,5 +18,7 @@
     <string name="item_details_icon_description">Icon Details Description</string>
     <string name="item_details_category_label">Category:</string>
     <string name="item_details_common_places_label">Common Places:</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
